Fixes vertical layout issues once for all.
CSS, my love.

--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -325,7 +325,10 @@ body {
 
   padding: 16px 16px;
 
+  min-height: calc( 100vh - 88px ) ;
+
   @media (min-width: 600px) {
+    min-height: calc( 100vh - 96px ) ;
     padding: 16px 32px;
   }
 
@@ -334,6 +337,7 @@ body {
   }
 
   @media (min-width: 1240px) {
+    min-height: calc( 100vh - 128px ) ;
     padding: 32px 96px;
   }
 
